tests/compError/functionType.iota
// compError
// error: alias 'String' does not exist
// line:9 -> here
// error: expected type struct builtin:Type{}, but got type struct builtin:String{}
// line:11 -> here
// error: expected type struct builtin:Type{}, but got type struct builtin:Number{}
// line:13 -> here

\(String) -> String

\("") -> 2

\(builtin.Float64) -> 2